--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 			    <div class="speaker"></div>
 			    <div class="screen home_page">
 					<div class="vert_central">
-						<a href="app.html">
+						<a href="/start">
 							<img src="images/beefee_bee.gif" />
 							<img src="images/beefee_logo.png" />
 						</a>
