--- a/templates/start.html
+++ b/templates/start.html
@@ -25,7 +25,8 @@
 		<link href="css/styles.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
-		<div class="iphone">
+		<div id="loading">loading</div>
+		<div class="iphone" id="content">
 			<div class="marvel-device iphone6 silver">
 			    <div class="top-bar"></div>
 			    <div class="sleep"></div>
@@ -36,19 +37,7 @@
 			    <div class="screen">
 					<div class="header">
 					</div>
-					<ul>
-						<li>
-							<span class="blue">30</span> push-ups
-						</li>
-						<li class="dark">
-							<span class="blue">15</span> pull-ups
-						</li>
-						<li>
-							<span class="blue">30</span> sit-ups
-						</li>
-						<li class="dark">
-							<span class="blue">20</span> push-ups
-						</li>
+					<ul id="data">
 					</ul>
 					<a class="start" href="/running"></a>
 			    </div>
@@ -56,8 +45,8 @@
 			</div>
 		</div>
 		<!-- Scripts -->
-		<script src="./index_files/jquery-1.10.1.min.js" type="text/javascript"></script>
-		<script src="./index_files/bootstrap.min.js" type="text/javascript"></script>
-		<script src="./index_files/controllers.js" type="text/javascript"></script>
+		<script src="js/vendor/jquery-1.10.1.min.js" type="text/javascript"></script>
+		<script src="js/vendor/bootstrap.min.js" type="text/javascript"></script>
+		<script src="js/start.js" type="text/javascript"></script>
 
 </body></html>
