--- a/templates/start.html
+++ b/templates/start.html
@@ -25,7 +25,6 @@
 		<link href="css/styles.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
-		<div id="loading">loading</div>
 		<div class="iphone" id="content">
 			<div class="marvel-device iphone6 silver">
 			    <div class="top-bar"></div>
@@ -39,7 +38,7 @@
 					</div>
 					<ul id="data">
 					</ul>
-					<a class="start" href="/running"></a>
+					<a class="start" href="/running" id="btn_start"></a>
 			    </div>
 			    <div class="bottom-bar"></div>
 			</div>
