--- a/templates/running.html
+++ b/templates/running.html
@@ -36,27 +36,15 @@
 			    <div class="screen">
 					<div class="header">
 					</div>
-					<ul>
-						<li class="finished">
-							<span class="blue">30</span> push-ups
-						</li>
-						<li class="dark active">
-							<span class="blue">15</span> pull-ups
-						</li>
-						<li>
-							<span class="blue">30</span> sit-ups
-						</li>
-						<li class="dark">
-							<span class="blue">20</span> push-ups
-						</li>
+					<ul id="data">
 					</ul>
 			    </div>
 			    <div class="bottom-bar"></div>
 			</div>
 		</div>
 		<!-- Scripts -->
-		<script src="./index_files/jquery-1.10.1.min.js" type="text/javascript"></script>
-		<script src="./index_files/bootstrap.min.js" type="text/javascript"></script>
-		<script src="./index_files/controllers.js" type="text/javascript"></script>
+		<script src="js/vendor/jquery-1.10.1.min.js" type="text/javascript"></script>
+		<script src="js/vendor/bootstrap.min.js" type="text/javascript"></script>
+		<script src="js/running.js" type="text/javascript"></script>
 
 </body></html>
